@@ -1,5 +1,10 @@
 Changes with Apache 2.0.38
 
+  *) We must set the MIME-type for .shtml files to text/html if we want them
+     to be parsed for SSI tags.  Add the config for that to the default 
+     config file so that it is easier to enable .shtml parsing.
+     [Dave Dyer <ddyer@real-me.net>]
+
   *) Fixed a problem with 'make install' on ReliantUnix.
      [Jean-frederic Clere <jfrederic.clere@fujitsu-siemens.com>]
 
